Use correct branches of openwrt and luci repositories for each SDK.

--- a/deps.conf
+++ b/deps.conf
@@ -1,1 +1,2 @@
-src-git luci http://git.openwrt.org/project/luci.git^d876593
+src-git base git://github.com/openwrt/openwrt.git
+src-git luci https://github.com/openwrt/luci.git
